Unit, Integration tests configuration and basic implementation